# virtual-camera

./: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
